# altira-takehome

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/: insomnia.har  insomnia.yaml  payload.json
src/: auth.rs  main.rs  utility.rs
src/schedule/: mod.rs  request.rs  response.rs  utility.rs
